css/styles.css
html, body, form {
    font-family: 'Open Sans', 'Segoe UI', Helvetica, Verdana, Arial, sans-serif;
    font-weight: 300;
    background-color: #FFF;
    outline: none;
    color: #777;
    height: 100%;
}

html, body {
    overflow: hidden;
}

body > .container-fluid {
    height: calc(100% - 50px);
    overflow-y: auto;
    min-width: 1460px;
    padding: 0;
    margin-top: 50px;
}

.navbar {
    background: #153057;
    color: #FFF;
    box-shadow: 0 1px 2px 1px rgba(179, 179, 179, 0.6);
    width: 100%;
}

.navbar .navbar-title {
    font-size: 24px;
    padding-top: 8px;
}

.navbar-inverse .navbar-nav>li>a {
  color: #FFF;
}

.navbar-fixed-top {
    border: 0;
}

.list-unstyled > li {
    padding: 10px;
}

#reset-button {
  float: right;
  margin-top: 5px;
}

#hide-controls {
  float: left;
  position: relative;
  left: 0px;
  top: 1.5px;
  height: 25px;

  color: #153057;
  background-color: #FFF;
  border-radius: 0px;
  border: 3px solid #153057;
  box-shadow: 0 1px 2px 1px rgba(179, 179, 179, 0.6);
}

#hide-controls select:focus {
    outline: none;
}

#divControls select {
  color: black;
}

/* Styling for popovers */
.popover > .arrow { 
  visibility: hidden;
}

/* Styling for 3D view */
#top_display_panel {
  height: 50%;
  width: 100%;
  display: inline-block;
  position: relative;
}

#three_d_plot {
  height: 100%;
  width: 40%;
  display: inline-block;
  position: relative;
}

#small_multiples{
    height: 100%;
    width: 20%;
    display: inline-block;
    position: relative;
}

/* Styling for expression plot tabs and plots */
svg#pcaChart {
  overflow: visible;
}

#expressionPlotTabs {
  width: 50%;
  height: 100%;
  display: inline-block;
}

.tab-content {
  height: 100%;
  width: 100%;
}

#exprDiv, #pcaDiv{
    overflow-y: scroll;
    height: 100%;
    width: 100%;
    position: relative;
    border: none;
    border-left: 1px solid #CCCCCC;
}

.exprPlot_data_point_rect:hover{
    stroke: #2394F5;
    stroke-width: 1px;
    cursor: pointer;
}

.pca_datapoint:hover{
    stroke: #2394F5;
    stroke-width: 1px;
    cursor: pointer;
}

/* Styling for 3D plot */
x3d {
  width: 80%;
  height: 100%;
  border: none;
  border-right: 1px solid #CCCCCC;

}



.control-section h1, h2, h3, h4, h5 {
  margin-right: 10px;
  font-size: 12px;
}

h1, h2, h3{
    padding-bottom: 10px;
    font-size: 15px;

    background-color: #153057;
}

.section-title h3 {
  color: #FFF;
  height: 50px;
  margin-top: 0px;
  line-height: 50px;
  font-weight: bold;
}

.section-title {
  height: 50px;
  background-color: #153057;
  width: 100%;
  margin-top: 0px;
  padding-left: 5px;
}

#divSelectForm, #selectForm {
  color: #555;
}

#divControls {
  position: fixed;
  top: 60px ;
  left: 5px;
  width:415px;
  background-color: #FAFAFA;
  color: #CCCCCC;
  display: inline-block;
  float: left;
  
  height: calc(100% - 60px);
  overflow-y: scroll;

  border-right: 2px solid #153057;
  border-left: 2px solid #153057;
}

::-webkit-scrollbar {
    width: 0px;  /* remove scrollbar space */
    background: transparent;  /* optional: just make scrollbar invisible */
}

#divPlot {
  padding-top: 50px;
  margin-left: 415px;
  height: 100%; 
  width: calc(100% - 420px);
  display: inline-block;
}

/* Styling for small multiples */
#small_multiples {
  display: inline-block;
  height: 100%;
  top: 0;
}

.small_multiples_chart {
  display: block;
  height: 33.3%;
}

.small_multiples_chart:hover {
  background-color: #e1e1e1;
  cursor: pointer;
}


/* Styling for lineage tree*/
.lineage_tree {
  width: 100%;
  height: 50%;
  margin-left: auto;
  margin-right: auto;
  display: inline-block;
}

/*
.lineage_tree svg{
  width: 100%;
}

.node {
  cursor: pointer;
}

.node text {
  font: 10px sans-serif;
  color: black;
}

.link {
  fill: none;
  stroke: #ccc;
  stroke-width: 1.5px;
}
*/

/* Styling for slider */
input[type=range] {
  -webkit-appearance: none;
  margin: 10px 0;
  width: 200px;
  margin-right: 10px;
  display: inline;
}

input[type=range]:focus {
  outline: 0;
}

input[type=range] {
  background: none;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 12.8px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  background: #D3D3D3;
  border-radius: 25px;
  border: 0px solid #000101;
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  border: 0px solid #000000;
  height: 20px;
  width: 20px;
  border-radius: 20px;
  background: #153057;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -3.6px;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 12.8px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  background: #D3D3D3;
  border-radius: 25px;
  border: 0px solid #000101;
}
input[type=range]::-moz-range-thumb {
  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
  border: 0px solid #000000;
  height: 20px;
  width: 20px;
  border-radius: 20px;
  background: #153057;
  cursor: pointer;
}

#reset-button {
  margin-bottom: 0px;
  display: inline;
  width: 75px;
}

#tree-reset-button {
  position: relative;
  left: 20px;
  top: 10px;
  width: 75px;
}

/* Styling for buttons */
#playpause, input[type="button"], input[type="submit"] {
  background-color: #FFF;
  border: 3px solid #153057;
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  border-radius:5px;
  display:inline-block;
  cursor:pointer;
  color:#153057;
  font-family:Arial;
  font-size:12px;
  width:50px;
  padding:2.5px 2.5px;
  text-decoration:none;
  outline: 0;
  font-weight: bold;
}


#playpause {
  margin-bottom: 10px;
  width: 30px;
  position: relative;
  top: -3px;
}

#playpause:hover, input[type="button"]:hover {
  opacity: 0.9;
}

#playpause:active, input[type="button"]:active, input[type="submit"]:active {
  color: white;
  background-color: #153057;
}

/* Overriding styling for certain buttons */
input[class="add-highlight"], input[class="removehi"] {
  width: 30px;
}

input[class="removehi"] {
  position: relative;
  top: 15px;
}

input[class="add-highlight"] {
  display: inline-block;
  float: right;
  right: 0px;
  margin-bottom: 10px;
  color: #FFF;
  background-color: #153057;
}

input[id="showhide-highlight"] {
  width: 150px;
  font-size: 12px;
  padding: 3px 3px;
}

.chosen-single .chosen-default {
  background-color: orange;
}

/* Styling for color picker input box */
input[type="text"] {
  background-color: #edf0f3;
  padding: 10px 10px 10px 10px;
  border-radius: 6px;
  border: 2px solid white;
  margin-right: 10px;
  color: #555;
}

input[type="text"]:focus,
input[type="text"].focus {
  border: 2px solid #E6E6E6;
  outline: 0;
}

/* Styling for color picker selector */
.chosen-container {
  display: inline-block;
  margin-right: 5px;
  margin-bottom: 10px;
}

input[type="color"] {
  border-radius: 5px;
  background-color: #FFFFFF;
  width: 40px;
  border: 1px solid #E6E6E6;
}

input[type="color"]:focus {
  outline: 0;
}

.picker-heading {
  margin-left: 5px;
}

.control-section {
  padding: 10px;
  border-bottom: 2px solid #153057;
}

.picker-controls {
  background-color: #FAFAFA;
  padding: 10px;
  margin-top: 20px;
}

/* Styling for playback speed buttons */
.select-style {
    width: 70px;
    height: 30px;
    display: inline-block;
}

.select-style select {
    padding: 8px;
    width: 75px;
}

.select-style select:focus {
    outline: none;
}

/* Intro.js tour custom CSS */
.introjs-tooltiptext {
  font-size: 15spx;
}

